# aamp

./: .gitignore  AAMP-UVE-API.md  AampBufferControl.cpp  AampBufferControl.h  AampCMCDCollector.cpp  AampCMCDCollector.h  AampCacheHandler.cpp  AampCacheHandler.h  AampConfig.cpp  AampConfig.cpp.rej  AampConfig.h  AampCurlStore.cpp  AampCurlStore.h  AampDRMLicPreFetcher.cpp  AampDRMLicPreFetcher.h  AampDRMLicPreFetcherInterface.h  AampDefine.h  AampDownloadInfo.hpp  AampDrmCallbacks.h  AampEvent.cpp  AampEvent.h  AampEventListener.cpp  AampEventManager.cpp  AampEventManager.h  AampFnLogger.h  AampFragmentDescriptor.cpp  AampFragmentDescriptor.hpp  AampGrowableBuffer.cpp  AampGrowableBuffer.h  AampGstUtils.cpp  AampGstUtils.h  AampHandlerControl.h  AampJsonObject.cpp  AampJsonObject.h  AampLLDASHData.h  AampLogManager.h  AampMPDDownloader.cpp  AampMPDDownloader.h  AampMPDParseHelper.cpp  AampMPDParseHelper.h  (+99 more)
Linux/: .gitignore  clean.sh  (+2 more)
middleware/base16_64/: CMakeLists.txt
middleware/baseConversion/: CMakeLists.txt
middleware/playerJsonObject/: CMakeLists.txt
middleware/playerLogManager/: CMakeLists.txt  PlayerLogManager.h
support/aampmetrics/test/tests/: CMakeLists.txt
support/uWebSockets/: CMakeLists.txt
test/ManifestSticher/: CMakeLists.txt  ManifestSticher.cpp  ReadMe.md
test/VideoTestStream/mp4tool/: CMakeLists.txt  extractcaptions.cpp  extractcaptions.hpp  generate_ttml.sh  main.cpp  parsemp4.cpp  parsemp4.hpp  ttmlgen.cpp  ttmlgen.hpp
test/smoketest/: AampSmokeTestPlayer.cpp  AampSmokeTestPlayer.h  CMakeLists.txt  HarvesterSmokeTest.cpp  README.md  README.txt  ScriptedSmokeTest.cpp  ScriptedSmokeTest.h  ScriptedSmokeTestEventListener.cpp  ScriptedSmokeTestEventListener.h  SmokeTestEventListener.h  TuneSmokeTest.cpp  gtest_main.cpp  run.sh
test/smoketest/scripts/: audio.smk  example1.smk.eg  example2.smk.eg  frozen-video.smk  scriptTestUrls.txt  seek.smk
test/utests/: CMakeLists.txt  ReadMe.md  cmake_exclude_file.list  parse_gtest_log.py  run.sh
test/utests/drm/: AampDrmTestUtils.cpp  AampDrmTestUtils.h  DrmTestUtils.cpp  DrmTestUtils.h  README.md
test/utests/drm/mocks/: FakeAampStreamSinkManager.cpp  FakeID3Metadata.cpp  MockPrivateInstanceAAMP.h  aampMocks.cpp  curlMocks.c  gstMocks.c
test/utests/drm/ocdm/: open_cdm.h
test/utests/fakes/: CMakeLists.txt  FakeABRManager.cpp  FakeAampBufferControl.cpp  FakeAampCCManager.cpp  FakeAampCMCDCollector.cpp  FakeAampCacheHandler.cpp  FakeAampConfig.cpp  FakeAampCurlDownloader.cpp  FakeAampCurlStore.cpp  FakeAampDRMHelper.cpp  FakeAampDRMLicPreFetcher.cpp  FakeAampDRMSession.cpp  FakeAampDRMSessionFactory.cpp  FakeAampDRMSessionManager.cpp  FakeAampDrmUtils.cpp  FakeAampEvent.cpp  FakeAampEventManager.cpp  FakeAampFragmentDescriptor.cpp  FakeAampGrowableBuffer.cpp  FakeAampGstPlayer.cpp  FakeAampGstUtils.cpp  FakeAampHandlerControl.cpp  FakeAampJsonObject.cpp  FakeAampLicManager.cpp  FakeAampLogManager.cpp  FakeAampMPDDownloader.cpp  FakeAampMPDParseHelper.cpp  FakeAampMPDUtils.cpp  FakeAampMemoryUtils.cpp  FakeAampOutputProtection.cpp  FakeAampProfiler.cpp  FakeAampRfc.cpp  FakeAampSCTE35.cpp  FakeAampScheduler.cpp  FakeAampStreamSinkManager.cpp  FakeAampTimeBasedBufferManager.cpp  FakeAampTrackWorker.cpp  FakeAampTrackWorkerManager.cpp  FakeAampUtils.cpp  FakeAdManager.cpp  (+50 more)
test/utests/mocks/: MockAampBufferControl.h  MockAampConfig.h  MockAampDRMSessionManager.h  MockAampDrmHelper.h  MockAampGstPlayer.h  MockAampGstUtils.h  MockAampHandlerControl.h  MockAampLicManager.h  MockAampLogManager.h  MockAampMPDDownloader.h  MockAampMPDParseHelper.h  MockAampMemorySystem.h  MockAampScheduler.h  MockAampStreamSinkManager.h  MockAampTrackWorker.h  MockAampUtils.h  MockCurl.h  MockDefaultSocInterface.h  MockGLib.h  MockGStreamer.h  MockIsoBmffBuffer.h  MockIsoBmffHelper.h  MockMediaStreamContext.h  MockMediaTrack.h  MockOpenCdm.h  MockOpenCdmSessionAdapter.h  MockPrivateInstanceAAMP.h  MockStreamAbstractionAAMP.h  MockStreamAbstractionAAMP_MPD.h  MockStreamSink.h  MockTSBDataManager.h  MockTSBReader.h  MockTSBSessionManager.h  MockTSBStore.h  telemetry_busmessage_sender.h
test/utests/ocdm/: open_cdm.h
test/utests/tests/: CMakeLists.txt
test/utests/tests/AampAbrTests/: AbrTests.cpp  CMakeLists.txt
test/utests/tests/AampBufferControlTests/: AampBufferControlTests.cpp  CMakeLists.txt
test/utests/tests/AampCMCDCollectorTests/: AampCMCDCollectorTests.cpp  CMakeLists.txt
test/utests/tests/AampCacheHandlerTests/: AampCacheHandlerTests.cpp  CMakeLists.txt
test/utests/tests/AampCliSet/: CMakeLists.txt
test/utests/tests/AampCurlDownloader/: CMakeLists.txt  FunctionalTests.cpp
test/utests/tests/AampDrmLegacy/: CMakeLists.txt
test/utests/tests/AampDrmSecureClient/: CMakeLists.txt
test/utests/tests/AampEventManagerTests/: AampEventManagerTests.cpp  CMakeLists.txt
test/utests/tests/AampEventTests/: AampEventTests.cpp  CMakeLists.txt
test/utests/tests/AampGrowableBuffer/: CMakeLists.txt  ConstructorsTests.cpp  FunctionalTests.cpp
test/utests/tests/AampGstPlayer/: CMakeLists.txt  FunctionalTests.cpp  PauseOnPlaybackTests.cpp
test/utests/tests/AampGstUtilsTests/: AampGstUtilsTests.cpp  CMakeLists.txt
test/utests/tests/AampHandlerControl/: AampHandlerControlTests.cpp
test/utests/tests/AampHandlerControlTests/: AampHandlerControlTests.cpp  CMakeLists.txt
test/utests/tests/AampLogManagerTests/: AampLogManagerTests.cpp  CMakeLists.txt
test/utests/tests/AampMPDDownloader/: CMakeLists.txt  FunctionalTests.cpp
test/utests/tests/AampMPDParseHelper/: CMakeLists.txt  FunctionalTests.cpp
test/utests/tests/AampMPDUtils/: CMakeLists.txt  FunctionalTests.cpp
test/utests/tests/AampOCDMSessionAdapter/: CMakeLists.txt  FunctionalTests.cpp
test/utests/tests/AampOcdmBasicSessionAdapterTests/: CMakeLists.txt  FunctionalTests.cpp
test/utests/tests/AampProfilerTests/: AampProfilerTests.cpp  CMakeLists.txt
test/utests/tests/AampSchedulerTests/: AampSchedulerTests.cpp  CMakeLists.txt
tsb/test/: CMakeLists.txt
tsb/test/l1tests/: CMakeLists.txt  ReadMe.md
tsb/test/l2tests/: CMakeLists.txt  ReadMe.md
(+953 files in other folders)
