include(GoogleTest)

add_subdirectory(AampCliSet)
add_subdirectory(Base64AAMP)
add_subdirectory(AampUtilsTests)
add_subdirectory(PlayerInstanceAAMP)
add_subdirectory(PrivateInstanceAAMP)
add_subdirectory(TextStyleAttributes)
add_subdirectory(UrlEncDecAAMP)
add_subdirectory(StreamAbstractionAAMP_HLS)
add_subdirectory(StreamAbstractionAAMP_MPD)
