include(GoogleTest)

add_subdirectory(AampEventTests)
add_subdirectory(AampCliSet)
add_subdirectory(AampGrowableBuffer)
add_subdirectory(Base64AAMP)
add_subdirectory(AampUtilsTests)
add_subdirectory(ConfigTests)
add_subdirectory(Iso639MapTests)
add_subdirectory(JsonObjectTests)
add_subdirectory(PlayerInstanceAAMP)
add_subdirectory(PrivateInstanceAAMP)
add_subdirectory(PreferredLanguages)
add_subdirectory(TextStyleAttributes)
add_subdirectory(UrlEncDecAAMP)
add_subdirectory(StreamAbstractionAAMP_HLS)
add_subdirectory(StreamAbstractionAAMP_MPD)
add_subdirectory(AampCurlDownloader)
add_subdirectory(AampMPDDownloader)
add_subdirectory(ManifestStitching)
add_subdirectory(AampMPDParseHelper) 
add_subdirectory(TsProcessorTests)
add_subdirectory(AampGstUtilsTests)
add_subdirectory(DashUtilsTests)
