include(GoogleTest)

add_subdirectory(AampEventTests)
add_subdirectory(AampCliSet)
add_subdirectory(AampGrowableBuffer)
add_subdirectory(AampCacheHandlerTests)
add_subdirectory(videoin_shimTests)
add_subdirectory(AampGstPlayer)
add_subdirectory(Base64AAMP)
add_subdirectory(AampUtilsTests)
add_subdirectory(ConfigTests)
add_subdirectory(Iso639MapTests)
add_subdirectory(JsonObjectTests)
add_subdirectory(PlayerInstanceAAMP)
add_subdirectory(PrivateInstanceAAMP)
add_subdirectory(PreferredLanguages)
add_subdirectory(TextStyleAttributes)
add_subdirectory(UrlEncDecAAMP)
add_subdirectory(StreamAbstractionAAMP_HLS)
add_subdirectory(StreamAbstractionAAMP_MPD)
add_subdirectory(AampCurlDownloader)
add_subdirectory(AampMPDDownloader)
add_subdirectory(AampCMCDCollectorTests)
add_subdirectory(ManifestStitching)
add_subdirectory(AampMPDParseHelper)
add_subdirectory(AampLogManagerTests)
add_subdirectory(TsProcessorTests)
add_subdirectory(AampGstUtilsTests)
add_subdirectory(ID3MetaDataTests)
add_subdirectory(compositein_shimTests)
add_subdirectory(hdmiin_shimTests)
add_subdirectory(ota_shimTests)
add_subdirectory(Scte35Tests)
add_subdirectory(DashUtilsTests)
add_subdirectory(AampSchedulerTests)
add_subdirectory(base16Tests)
add_subdirectory(AampProfilerTests)
add_subdirectory(DashUrl)
add_subdirectory(MediaStreamContextTests)
add_subdirectory(AampEventManagerTests)
add_subdirectory(fragmentcollector_hls)
add_subdirectory(AampBufferControlTests)
add_subdirectory(fragmentcollector_progressiveTests)
add_subdirectory(AampMPDUtils)
add_subdirectory(PrivAampTests)
add_subdirectory(AampTsbDataManager)
add_subdirectory(IsoBmffBufferTests)
add_subdirectory(IsoBmffBoxTests)
add_subdirectory(IsoBmffProcessorTests)
add_subdirectory(IsoBmffConvertToKeyFrameTests)
add_subdirectory(IsoBmffHelperTests)
add_subdirectory(AampStreamSinkManagerTests)
add_subdirectory(ElementaryProcessorTests)
add_subdirectory(AampTimeTests)
add_subdirectory(AampHandlerControlTests)
add_subdirectory(AampTelemetryTests)
add_subdirectory(AampOcdmBasicSessionAdapterTests)
add_subdirectory(DrmOcdm)
add_subdirectory(DrmLegacy)
add_subdirectory(DrmSecureClient)
add_subdirectory(lstringTests)
add_subdirectory(AampTSBSessionManager)
add_subdirectory(fragmentcollector_mpd)
add_subdirectory(AdManagerMPDTests)
add_subdirectory(TrackInjectTests)
add_subdirectory(AdFallbackTests)
